fixing issue with buttons on Safari Mobile

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -44,6 +44,10 @@
 	}
 }
 
+input[type=submit] {
+	-webkit-border-radius:0px;
+}
+
 #map_canvas {
 	height: 400px;
 	background-color: #CCCCCC;
